3.2.0.0/TRANSLATION_STATUS.zh-TW.md
# 翻譯狀態 (3.2.0.0)

> 🌐 [English](TRANSLATION_STATUS.md) | **繁體中文**

原地重算：本版現有譯文皆予保留，仍標記為 `untranslated` 的字串維持原狀（補譯前先顯示英文）。

- 字串總數（兩專案合計）: 466
- 產生時間: 2026-06-24 11:05:46 +08:00

快速跳轉: [es-ES](#es-es) · [tr-TR](#tr-tr)

## 整體（兩專案合計）

| 語言 | 已翻譯 | 待翻譯 | 完成度 |
|----------|-----------:|--------:|---------:|
| es-ES | 466 | 0 | 100% |
| tr-TR | 464 | 2 | 99% |

## 專案: OmniConsole

字串數: 443

| 語言 | 已翻譯 | 待翻譯 | 完成度 |
|----------|-----------:|--------:|---------:|
| es-ES | 443 | 0 | 100% |
| tr-TR | 442 | 1 | 99% |

## 專案: OmniConsole.PhantomLink

字串數: 23

| 語言 | 已翻譯 | 待翻譯 | 完成度 |
|----------|-----------:|--------:|---------:|
| es-ES | 23 | 0 | 100% |
| tr-TR | 22 | 1 | 95% |

## 待翻譯的 key

### es-ES

_全部已翻譯。_

### tr-TR

**OmniConsole**

變動（需重譯） (1):
- `ManageLanguages_Action_Install`

**OmniConsole.PhantomLink**

新增 (1):
- `Widget_Layout_Classic.Content`
