3.5.0.0/TRANSLATION_STATUS.zh-TW.md
# 翻譯狀態 (3.5.0.0)

> 🌐 [English](TRANSLATION_STATUS.md) | **繁體中文**

原地重算：本版現有譯文皆予保留，仍標記為 `untranslated` 的字串維持原狀（補譯前先顯示英文）。

- 字串總數（兩專案合計）: 472
- 產生時間: 2026-07-04 13:24:00 +08:00

快速跳轉: [es-ES](#es-es) · [tr-TR](#tr-tr)

## 整體（兩專案合計）

| 語言 | 已翻譯 | 待翻譯 | 完成度 |
|----------|-----------:|--------:|---------:|
| es-ES | 472 | 0 | 100% |
| tr-TR | 466 | 6 | 98% |

## 專案: OmniConsole

字串數: 449

| 語言 | 已翻譯 | 待翻譯 | 完成度 |
|----------|-----------:|--------:|---------:|
| es-ES | 449 | 0 | 100% |
| tr-TR | 443 | 6 | 98% |

## 專案: OmniConsole.PhantomLink

字串數: 23

| 語言 | 已翻譯 | 待翻譯 | 完成度 |
|----------|-----------:|--------:|---------:|
| es-ES | 23 | 0 | 100% |
| tr-TR | 23 | 0 | 100% |

## 待翻譯的 key

### es-ES

_全部已翻譯。_

### tr-TR

**OmniConsole**

新增 (6):
- `BackgroundMaterialSetting_Title.Text`
- `BackgroundMaterialSetting_Description.Text`
- `BackgroundMaterialSetting_Note.Text`
- `BackgroundMaterialItem_PhantomClassic`
- `BackgroundMaterialItem_PhantomGlass`
- `BackgroundMaterialItem_PhantomGlassDeep`
